<resources>
    <string name="app_name">Chama Plus</string>
    <string name="please_wait">Please wait...</string>

    <!-- SideBar Menu -->
    <string name="menu_logout">Logout</string>
    <string name="switch_mode">Do you want to switch app mode to</string>
    <string name="sandbox">Sandbox</string>
    <string name="live">Live</string>
    <string name="home_u">HOME</string>
    <string name="transactions_u">TRANSACTIONS</string>
    <string name="help">HELP</string>
    <string name="settings_u">SETTINGS</string>
    <string name="profile_u">PROFILE</string>
    <string name="change_password_u">CHANGE PASSWORD</string>
    <string name="contact_us_u">CONTACT US</string>
    <string name="group_profile_u">GROUP PROFILE</string>
    <string name="group_financial_u">GROUP FINANCIAL</string>
    <string name="members_u">MEMBERS</string>
    <string name="outstanding_u">OUTSTANDING</string>
    <string name="logout_u">LOGOUT</string>

    <!-- Custom Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="alert">Alert</string>

    <!-- LoginActivity -->
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="remember_me">Remember Me?</string>
    <string name="need_help">Need Help</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log in</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="permission_denied">Permissions were denied. In order to allow permission, first you have to turn off screen overlay from Settings > Apps.</string>

    <!-- SignupActivity -->
    <string name="join">JOIN</string>
    <string name="as_member">(As a Member)</string>
    <string name="full_name">Full Name</string>
    <string name="chama_code">Chama Code</string>
    <string name="register_u">REGISTER</string>
    <string name="as_group_leader">(As a Group Leader)</string>
    <string name="chama_name">Chama Name</string>
    <string name="submit">Submit</string>

    <!-- SetDefaultValuesActivity -->
    <string name="group_leader_chama_details">(Group Leader Chama Details)</string>
    <string name="your_name">Your Name</string>
    <string name="date">Date</string>
    <string name="set_chama_rules">SET CHAMA RULES</string>
    <string name="max_members">Max No. of Members</string>
    <string name="double_points">:</string>
    <string name="each_member_contribution_kes">Each member Contribution in Kes</string>
    <string name="contribution_cycle">Contribution Cycle</string>
    <string name="how_percentage">How your money works in percentages</string>
    <string name="input_figures">(Input figures from 0-100%)</string>
    <string name="emergency_fund">Emergency Fund</string>
    <string name="save_3x">3x My Savings</string>
    <string name="merry">Merry Go Round</string>
    <string name="ex_10">(i.e 10)</string>
    <string name="ex_70">(i.e 70)</string>
    <string name="ex_20">(i.e 20)</string>
    <string name="total_contributions">Total contributions: 100%</string>
    <string name="invite_members">INVITE MEMBERS</string>
    <string name="chama_desc">*Please not that you may input 0% where you don\'t want applicable to your Chama.</string>

    <!-- HomeActivity -->
    <string name="home">Home</string>
    <string name="all">All</string>
    <string name="contribute">Contribute</string>
    <string name="borrow">Borrow</string>
    <string name="loans">Loans</string>

    <!-- ContributeFragment -->
    <string name="enter_amount">Enter Amount</string>
    <string name="borrowed_amount_dot">Borrowed Amount:</string>
    <string name="repayment_amount_dot">Repayment Amount:</string>
    <string name="choose_method">Choose Method</string>
    <string name="cycle">Cycle:</string>
    <string name="payment_method">Payment Method</string>
    <string name="how_your_money_works">How your money works</string>
    <string name="interest_rate">Interest rate</string>
    <string name="processing_fee">Processing fee</string>
    <string name="send">Send</string>

    <!-- BorrowFragment -->
    <string name="need_money_for">I need money for</string>
    <string name="withdraw_to">Withdraw to:</string>
    <string name="withdraw">Withdraw</string>

    <!-- LoansFragment -->
    <string name="repay">Repay</string>
    <string name="loan_request">Loan Requests</string>

    <!-- BorrowEmergencyFundActivity -->
    <string name="duration">Duration:</string>
    <string name="confirm_amount">Confirm Amount:</string>
    <string name="request_to">Request to:</string>
    <string name="note_rate">*Please note your interest rate is 2%</string>
    <string name="repay_amount_will_be">*Repayment amount will be :</string>

    <!-- BorrowSavingsActivity -->
    <string name="your_current_savings">Your Current Savings :</string>
    <string name="request">Request :</string>
    <string name="other_amount">Other Amount :</string>

    <!-- BorrowMerryActivity -->
    <string name="list_of_members_due_date">List Of Members Due Date :</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="my_payment_date">My Payment Date :</string>
    <string name="amount">Amount:</string>
    <string name="you_will_get_your_money_soon">You will get your money soon !</string>

    <!-- SettingsActivity -->
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>

    <!-- Transactions Part -->
    <string name="transactions">Transactions</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_contributed_amount">Total Contributed Amount</string>
    <string name="total_borrowed_amount">Total Borrowed Amount</string>
    <string name="total_loaned_amount">Total Loaned Amount</string>
    <string name="total_repaid_amount">Total Repaid Amount</string>
    <string name="total_loan_paid_back_amount">Total Loans Paid Back Amount</string>

    <!-- ChangePasswordActivity -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>

    <!-- ProfileActivity -->
    <string name="save">Save</string>
    <string name="cropping_failed">Cropping failed:</string>
    <string name="chama_name_dot">Chama Name:</string>
    <string name="chama_code_dot">Chama Code:</string>
    <string name="chama_role_dot">Chama Role:</string>
    <string name="status_dot">Status:</string>

    <!-- ContactActivity -->

    <!-- MembersActivity -->
    <string name="members">Members</string>
    <string name="leader">Leader</string>
    <string name="treasure">Treasure</string>
    <string name="secretary">Secretary</string>
    <string name="chairperson">ChairPerson</string>

    <!-- OutstandingActivity -->
    <string name="outstanding">Outstanding</string>

    <!-- OutstandingDetailActivity -->
    <string name="detail">Detail</string>
    <string name="borrowed_amount">Borrowed Amount:</string>
    <string name="loan_amount">Loan Amount:</string>
    <string name="borrowed_date">Borrowed Date:</string>
    <string name="scheduled_loan_date">Scheduled Loan Date:</string>
    <string name="remind">Remind</string>
    <string name="interest_rate_dot">Interest Rate:</string>
    <string name="fee_dot">Processing Fee:</string>
    <string name="suspend">Suspend</string>
    <string name="status">Status:</string>

    <!-- MemberDetailActivity -->
    <string name="full_name_dot">Full Name:</string>
    <string name="phone_dot">Phone:</string>
    <string name="unsuspend">Unsuspend</string>
    <string name="remove">Remove</string>

    <!-- GroupFinancialActivity -->
    <string name="group_financial">Group Financial</string>

    <!-- GroupProfileActivity -->
    <string name="group_profile">Group Profile</string>
    <string name="total_members_dot">Total Members:</string>
    <string name="total_balance_dot">Total Balance:</string>
    <string name="total_contributed_amount_dot">Total Contributed Amount:</string>
    <string name="total_borrowed_amount_dot">Total Borrowed Amount:</string>
    <string name="total_loaned_amount_dot">Total Loaned Amount:</string>
    <string name="total_outstanding_amount_dot">Total Outstanding Amount:</string>
    <string name="non_contributed_users">Non Contributed Users</string>
    <string name="pending_loan_requests">Pending Loan Requests</string>
    <string name="group_transactions">Group Transactions</string>
    <string name="total_repaid_amount_dot">Total Repaid Amount:</string>

    <!-- PendingLoanRequestsActivity -->
    <string name="total_pending_loan_amount">Total Pending Loan Amount</string>
    <string name="pending_member_contributions">Pending Members Contributions</string>
</resources>