<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.borrow.MerryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:background="@color/light_yellow"
                android:gravity="center"
                android:text="@string/merry"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/listTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_of_members_due_date"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_alignLeft="@+id/listTitle"
                android:layout_alignRight="@+id/listTitle"
                android:layout_below="@+id/listTitle"
                android:background="@color/gray"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/amountTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/amount"
            android:textSize="@dimen/_14sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="@dimen/_2sdp"
                app:cardElevation="@dimen/_2sdp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/white"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/acceptBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:background="@color/light_green"
                        android:text="@string/accept"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                </com.balysv.materialripple.MaterialRippleLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_10sdp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="@dimen/_2sdp"
                app:cardElevation="@dimen/_2sdp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/white"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/declineBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/half_red"
                        android:enabled="false"
                        android:text="@string/decline"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                </com.balysv.materialripple.MaterialRippleLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"

            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_check"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/you_will_get_your_money_soon"
                android:textSize="@dimen/_14sdp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>