<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_2sdp">

            <TextView
                android:id="@+id/profileTV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:text="@string/profile"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_2sdp">

            <TextView
                android:id="@+id/changePasswordTV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:text="@string/change_password"
                android:paddingLeft="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:textSize="@dimen/_14sdp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_2sdp">

            <TextView
                android:id="@+id/contactTV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:text="@string/contact_us"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>