<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.contribute.fragment.ContributeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_30sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/amountTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="300 KES"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cycle"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/cycleTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="Monthly"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/payment_method"
                    android:textSize="@dimen/_14sdp" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:cardBackgroundColor="#fff"
                    app:cardCornerRadius="@dimen/_1sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="@dimen/_2sdp">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_height" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/how_your_money_works"
                    android:textSize="@dimen/_14sdp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_20sdp" />

                <!--<TextView
                    android:id="@+id/rateTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/interest_rate"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/feeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/processing_fee"
                    android:textSize="@dimen/_13sdp" />-->

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:cardBackgroundColor="#fff"
                    app:cardCornerRadius="@dimen/_1sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="0dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleAlpha="0.2"
                        app:mrl_rippleColor="@color/white"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="true">

                        <Button
                            android:id="@+id/sendBtn"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/btn_height"
                            android:layout_gravity="center"
                            android:background="@color/colorPrimary"
                            android:text="@string/send"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />

                    </com.balysv.materialripple.MaterialRippleLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>