<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_2sdp">

            <EditText
                android:id="@+id/currentPasswordET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:hint="@string/current_password"
                android:paddingLeft="@dimen/_10sdp"
                android:background="@color/white"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sdp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_2sdp">

            <EditText
                android:id="@+id/newPasswordET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:hint="@string/new_password"
                android:paddingLeft="@dimen/_10sdp"
                android:background="@color/white"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/_2sdp">

            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:hint="@string/confirm_password"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_14sdp"/>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="@dimen/_2sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="0dp">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/white"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </com.balysv.materialripple.MaterialRippleLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>